@@ -1,10 +1,11 @@
-2014/06/09 (1.2.3)
+2014/06/09 (1.2.4)
 - Using VirtualEnv for local development and testing.
 - No longer installing system-wide config files (in /etc).
 - Fixed broken dependencies.
 - Removed manual handling of files uploaded via XMPP.
 - New, faster CLI.
 - Subprocess monitor names log files on child errors.
+- Initialize database when running the server.
 
 2013/09/30 (1.2.2)
 - Fix permissions on config files during component startup.
